# emc2d

./: .gitignore  CMakeLists.txt  IsMemSavingPossible.md  README.md  Untitled.ipynb  array_subclassing_study.py  dev.py  emc_test.py  example.py  requirements.txt  setup.py  simtools.py  smiley.npy  test.py
benchmark/: memsaving.py
emc2d/: __init__.py  calibrate.py  core.py  corrector.py  drift_setup.py  emc.py  emc_greedy.py  emc_tf.py  emc_torch.py  fn_tools.py  frame_stack.py  image.py  main.py  misc.py  model.py  numerics.py  sim.py  sim_tools.py  transform.py  transformations.py  transforms.py  utils.py  viz.py
emc2d/.mypy_cache/3.6/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  math.data.json  math.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  (+9 more)
emc2d/extensions/: CMakeLists.txt
emc2d/extensions/src/: emcCore.cpp  emcCore.h  emc_kernel.cpp  utils.h
lab/: EMCRunThrough.ipynb  EMCSparseStrategy.ipynb
src/cuda/: EMCRec.cpp  EMC_Generator.h  emc_core.hpp  host_functions.h  image.cpp  main.cpp  noise_filter.hpp  reconstructor.hpp  thrust_functions.cu  transforms.hpp
src/gpu/: .image.cpp.swp  GPUEMCRec.cu  GPUEMCRec.h  common.hpp  compile_macOS.sh  contrast.hpp  dataProtocol.hpp  emc.cpp  emc.hpp  image.hpp  image_gpu.h  kernels.cu  model.hpp  test.cpp  test_eigen.cpp  transforms.cpp  trasform.cpp
test/: emc_test.py
test/data/: 4BED_t40_d5000.npy  5L54_t40_d5000.npy
(+12 files in other folders)
